--- a/css/index.css
+++ b/css/index.css
@@ -31,9 +31,9 @@ header{
 .header a{color: white;}
 
 .header .main > a{
-    font-weight: 200;
+    font-weight: 300;
     letter-spacing: 1px;
-    margin: 0 10px;
+    margin: 0 15px;
 }
 .header .info > a{
     font-size: 15px;
@@ -60,10 +60,10 @@ header{
     position: absolute;
     bottom: 50px;
     display: flex;
-    column-gap: 5%;    
+    justify-content: space-between;    
 }
 
-.booking p{font-weight: 200; margin-bottom: 10px;}
+.booking p{font-weight: 300; margin-bottom: 10px;}
 .booking b{font-size: 30px;}
 .booking span{font-size: 0;}
 .booking span::after{
@@ -73,4 +73,16 @@ header{
     font-family: 'Material Symbols Outlined';
     vertical-align:top;
     margin-left: 50px;
+}
+.booking a{font-size: 0;}
+.booking a::after{
+    display: inline-block;
+    font-size: 50px;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 10px 15px;
+    color: white;
+    content: 'search';
+    font-family: 'Material Symbols Outlined';
+    vertical-align:middle;
 }
