--- a/css/common.css
+++ b/css/common.css
@@ -5,57 +5,55 @@ body{
     text-transform: uppercase;
 }
 
-/* header ----------------------------------------------------------------- */
+/* 퀵메뉴 */
 
-/* header{
+.quick{
     position: fixed;
-    width: 100%;
-    padding: 15px 0;
-    background-color: rgba(0, 20, 0, 0.7);
-    left: 0; top: 0;
+    right: 9%; bottom: 10%;
+    width: 65px;
 }
-.header{
-    width: 1300px; 
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header a{color: white; text-transform: uppercase;}
-.header > nav > a{margin-left: 30px;}
-.header a:hover{color: limegreen;} */
 
-
-/* spot ----------------------------------------------------------------- */
-/* 
-.spot{
-    width: 100%;
-    height: 100vh;
-    background: url('../imgs/img_main-spot.jpg') 0 0 / cover no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.quick li{
+    background-color: white;
+    height: 65px;
+    margin-top: 25px;
+    border-radius: 18px;
     text-align: center;
-    }
-.spot div{
-    color: white;
-    font-size: 22px;
-    line-height: 1.5;
-    }
-.spot p{}
-.spot b{
-    font-size: 50px;
-    text-transform: uppercase;
-    }
-.spot a{
-    background-color: green;
-    color: inherit;
-    padding: 10px 30px;
-    margin-top: 40px;
+    align-content: center;
+    padding: auto;
+    line-height: 1;
+}
+
+.quick > li:nth-of-type(1){font-size: 15px;}
+.quick > li:nth-of-type(1)::before{
     display: inline-block;
-    transition: 0.5s;
-    }
-.spot a:hover{
-    background-color: darkorange;
-    color: black;
-} */
+    content: '';
+    width: 35px; height: 35px;
+    background: url('../imgs/icon_clouds.svg') 0 / cover;
+}
+
+.quick > li:nth-of-type(2){
+    background-color: cornflowerblue;
+}
+.quick > li:nth-of-type(2) > a{
+    font-size: 0;
+}
+.quick > li:nth-of-type(2) > a::after{
+    display: inline-block;
+    content: '';
+    width: 65%; height: 60%;
+    background: url('../imgs/icon_chat.svg') 0 /cover;
+    vertical-align: bottom;
+    margin-top: 5px;
+}
+
+.quick > li:nth-of-type(3){font-size: 17px;}
+.quick > li:nth-of-type(3)::before{
+    display: inline-block;
+    content: 'keyboard_arrow_up';
+    font-family: 'Material Symbols Outlined';
+    font-size: 40px;
+    vertical-align: middle;
+    line-height: 0.6;
+}
+
